--- a/index.html
+++ b/index.html
@@ -7,27 +7,27 @@
 
   <!-- Open Graph / Twitter metas (corrected) -->
   <meta name="description" content="Gallerie privée — Cosplay">
-  <link rel="canonical" href="https://private-gallery.onrender.com/">
+  <link rel="canonical" href="https://private-gallery-ftsq.onrender.com/">
 
   <meta property="og:locale" content="fr_CA">
   <meta property="og:site_name" content="Ellie.B-fitmodel">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://private-gallery.onrender.com/">
+  <meta property="og:url" content="https://private-gallery-ftsq.onrender.com/">
   <meta property="og:title" content="Private photo gallery !">
   <meta property="og:description" content="Secured access to my private photo gallery.">
   <!-- Use the SAME image URL everywhere -->
-  <meta property="og:image" content="https://private-gallery.onrender.com/preview_private.jpg?v=2">
-  <meta property="og:image:secure_url" content="https://private-gallery.onrender.com/preview_private.jpg?v=2">
+  <meta property="og:image" content="https://private-gallery-ftsq.onrender.com/preview_private.jpg?v=2">
+  <meta property="og:image:secure_url" content="https://private-gallery-ftsq.onrender.com/preview_private.jpg?v=2">
   <meta property="og:image:type" content="image/jpeg">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="630">
   <meta property="og:image:alt" content="Shooting Banner">
-  <link rel="image_src" href="https://private-gallery.onrender.com/preview_private.jpg?v=2">
+  <link rel="image_src" href="https://private-gallery-ftsq.onrender.com/preview_private.jpg?v=2">
 
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Private photo gallery !">
   <meta name="twitter:description" content="Secured access to my private photo gallery.">
-  <meta name="twitter:image" content="https://private-gallery.onrender.com/preview_private.jpg?v=2">
+  <meta name="twitter:image" content="https://private-gallery-ftsq.onrender.com/preview_private.jpg?v=2">
   <!-- End OG/Twitter -->
 
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&display=swap" rel="stylesheet"/>
